<resources>
    <string name="title_activity_food_list">FoodList</string>
    <string name="app_name">FitU</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_food">Add Food</string>
    <string name="selectmeal">Select meal</string>
    <string name="foodname">Food Name</string>
    <string name="fats">Enter Fats </string>
    <string name="protien">Enter Protien</string>
    <string name="carbs">Enter Carbs</string>
    <string name="examnum">(200 "grams")</string>
    <string name="examstr">(Banana)</string>

    <string-array name="meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
