<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_food_black"
        android:title="@string/title_food"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
